apps/core/argo-workflows/manifests/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argo-workflows
  namespace: argo-workflows
spec:
  parentRefs:
    - name: main
      namespace: gateway
      sectionName: https-wildcard
  hostnames:
    - argo-workflows.lab.the-lab.zone
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: argo-workflows-server   # service do chart: <release>-server
          port: 2746
